fixed task bubble and feedback container overflow

--- a/rec/css/header.css
+++ b/rec/css/header.css
@@ -56,7 +56,8 @@ header {
   margin: 0 0 0 -25px;
   border-radius: 10px;
   height: 20px;
-  width: 20px;
+  min-width: 20px;
+  padding: 0 5px;
   font-size: 12px;
   background-color: var(--bs-danger);
   color: white;
